--- a/server/package.json
+++ b/server/package.json
@@ -24,7 +24,9 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.5",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "swagger-ui-express": "^5.0.0",
+    "yaml": "^2.3.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -34,6 +36,7 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@types/morgan": "^1.9.4",
     "@types/node": "^18.16.1",
+    "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
     "chalk": "^4.1.0",
